# MironCraft

./: .gitignore  CMakeLists.txt  Makefile  README.md  res
OpenGL Learning/: OpenGL Learning.sln  OpenGL Learning.vcxproj  OpenGL Learning.vcxproj.filters
OpenGL Learning/Release/: OpenGL Learning.exe.recipe  OpenGL Learning.iobj  OpenGL Learning.ipdb
OpenGL Learning/Release/OpenGL Learning.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenGL Learning.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
OpenGL Learning/res/shaders/: default.frag  default.vert
OpenGL Learning/src/: Block.h  Camera.h  Chunk.h  Common.h  Game.h  Renderer.h  Shader.h  Texture.h  Tree.h  VertexArray.h  Window.h
mironcraft/: OpenGL Learning.vcxproj  OpenGL Learning.vcxproj.filters  glad.c
mironcraft/include/: Application.h  Block.h  Camera.h  Chunk.h  Collision.h  Common.h  Crosshair.h  DebugCamera.h  Game.h  IndexBuffer.h  Player.h  Raycast.h  Renderer.h  Shader.h  ShadowMap.h  Texture.h  Tree.h  VertexArray.h  VertexBuffer.h  Window.h
mironcraft/res/shaders/: debug.vert  default.frag  default.vert  outline.frag  outline.vert  shadow.frag  shadow.vert  ui.frag
mironcraft/src/: Application.cpp  Application.h  Block.cpp  Block.h  Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  Collision.cpp  Common.cpp  Crosshair.cpp  DebugCamera.cpp  Game.cpp  Game.h  IndexBuffer.cpp  IndexBuffer.h  Player.cpp  Raycast.cpp  Renderer.cpp  Shader.cpp  Shader.h  ShadowMap.cpp  Texture.cpp  Tree.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBuffer.h  Window.cpp  main.cpp
(+1 files in other folders)
